<resources>
    <string name="app_name">PrimeiroProjeto</string>
    <string name="calculadora">Calculator</string>
    <string name="seu_peso">Weight</string>
    <string name="sua_altura">Height</string>
    <string name="botao_calcular">CALCULATE</string>
    <string name="botao_limpar">CLEAN</string>
    <string name="label_exemplo_1_7">Exemplo: 1.7</string>
    <string name="label_exemplo_1_7">Example</string>
</resources>
