<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FormularioActivity">

    <TextView
        style="@style/tituloPrincipal"
        android:text="@string/calculadora" />

    <TextView
        style="@style/label"
        android:text="@string/seu_peso" />

    <EditText
        style="@style/input"
        android:hint="@string/label_exemplo_1_7" />

    <TextView
        style="@style/label"
        android:text="@string/sua_altura" />

    <EditText
        style="@style/input"
        android:hint="@string/label_exemplo_1_7" />

    <Button
        style="@style/botao"
        android:text="@string/botao_calcular" />

    <Button
        style="@style/botao"
        android:text="@string/botao_limpar" />

</LinearLayout>